Fix spacing issues on various lines of css

--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 html {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-body{
+body {
   background-color: #ccc;
-  font-family:sans-serif;
+  font-family: sans-serif;
 }
 
 h1 {
